--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /Classes/build/
 /Inheritance/nbproject/private/
 /Inheritance/build/
+/Abstract class/nbproject/private/
+/Abstract classes/nbproject/private/
+/Abstract classes/build/
+/Interfaces/nbproject/private/
