--- a/Abstract classes/nbproject/project.properties
+++ b/Abstract classes/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Loop.jar
+dist.jar=${dist.dir}/Abstract_classes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Loop
+dist.jlink.output=${dist.jlink.dir}/Abstract_classes
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Loop
-main.class=loop.Loop
+jlink.launcher.name=Abstract_classes
+main.class=pkgabstract.classes.AbstractClasses
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
