--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Interfaces/build/
 /Inner class/nbproject/private/
 /Inner class/build/
+/static and final/nbproject/private/
+/static and final/build/
