--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /Inner class/build/
 /static and final/nbproject/private/
 /static and final/build/
+/Singleton classs/nbproject/private/
+/Singleton classs/build/
+/Static exercise/nbproject/private/
+/Static exercise/build/
+/Organization/nbproject/private/
+/Organization/build/
