--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /Organization/build/
 /Packages/nbproject/private/
 /Packages/build/
+/Exception handling/nbproject/private/
+/Exception handling/build/
