--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /Packages/build/
 /Exception handling/nbproject/private/
 /Exception handling/build/
+/Exception exercise/nbproject/private/
+/Exception exercise/build/
