--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /Exception handling/build/
 /Exception exercise/nbproject/private/
 /Exception exercise/build/
+/MultiThreading/nbproject/private/
+/MultiThreading/build/
