--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /Exception exercise/build/
 /MultiThreading/nbproject/private/
 /MultiThreading/build/
+/Multithreading exercise/nbproject/private/
+/Multithreading exercise/build/
+/ITC/nbproject/private/
