--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /Multithreading exercise/nbproject/private/
 /Multithreading exercise/build/
 /ITC/nbproject/private/
+/ITC/build/
+/Multithreading challenge/nbproject/private/
+/Multithreading challenge/build/
