--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /ITC/build/
 /Multithreading challenge/nbproject/private/
 /Multithreading challenge/build/
+/Javapackages/nbproject/private/
+/Javapackages/build/
