--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /Enum/build/
 /Enum/dist/
 /Hospital management system/nbproject/private/
+/Lambda function/nbproject/private/
+/Lambda function/build/
