--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@
 /Hospital management system/nbproject/private/
 /Lambda function/nbproject/private/
 /Lambda function/build/
+/Java IO/nbproject/private/
+/JavaIO/nbproject/private/
+/JavaIO/build/
