--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@
 /JavaIO/build/
 /Pipes/nbproject/private/
 /Pipes/build/
+/File/nbproject/private/
+/Files/nbproject/private/
+/Files/build/
+/PrintStream/nbproject/private/
+/PrintStream/build/
