--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /Files/build/
 /PrintStream/nbproject/private/
 /PrintStream/build/
+/DataIO challenge/nbproject/private/
+/DataIO challenge/build/
