--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@
 /PrintStream/build/
 /DataIO challenge/nbproject/private/
 /DataIO challenge/build/
+/Generics/nbproject/private/
+/Generics/build/
