--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@
 /Generics/build/
 /Collections/nbproject/private/
 /Collections/build/
+/Collections challenge/nbproject/private/
+/Collections challenge/build/
+/DateTime/nbproject/private/
+/DateTime/build/
