--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@
 /Collections challenge/build/
 /DateTime/nbproject/private/
 /DateTime/build/
+/EchoServer/nbproject/private/
+/EchoServer/build/
+/EchoServer/dist/
