--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@
 /EchoServer/nbproject/private/
 /EchoServer/build/
 /EchoServer/dist/
+/Database/nbproject/private/
+/Database/build/
+/JDBCex/nbproject/private/
+/JDBCex/build/
+/School/nbproject/private/
+/School/build/
