--- a/School/nbproject/project.properties
+++ b/School/nbproject/project.properties
@@ -28,14 +28,16 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Practice.jar
+dist.jar=${dist.dir}/School.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Practice
+dist.jlink.output=${dist.jlink.dir}/School
 excludes=
+file.reference.mysql-connector-java-5.1.22-bin.jar=C:\\Users\\mdoba\\Downloads\\mysql-connector-java-5.1.22-bin.jar\\mysql-connector-java-5.1.22-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Practice
-main.class=practice.Practice
+jlink.launcher.name=School
+main.class=school.School
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
