--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@
 /School/nbproject/private/
 /School/build/
 /AWTdemo/nbproject/private/
+/AWTdemo/build/
+/AWTdemo2/nbproject/private/
+/AWTdemo2/build/
+/ButtonEvent/nbproject/private/
