--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,10 @@
 /AWTdemo2/nbproject/private/
 /AWTdemo2/build/
 /ButtonEvent/nbproject/private/
+/ButtonEvent/build/
+/CheckBoxAndRadioButton/nbproject/private/
+/CheckBoxAndRadioButton/build/
+/RadioButton/nbproject/private/
+/RadioButton/build/
+/TextField/nbproject/private/
+/TextFieldDemo/nbproject/private/
